packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_class_name.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 2648
expression: output
---
==INPUT==


import { component$ } from '@builder.io/qwik';

export const App2 = component$(() => {
	const signal = useSignal();
	const computed = signal.value + 'foo';
	return (
		<>
			<div className="hola"></div>
			<div className={signal.value}></div>
			<div className={signal}></div>
			<div className={computed}></div>

			<Foo className="hola"></Foo>
			<Foo className={signal.value}></Foo>
			<Foo className={signal}></Foo>
			<Foo className={computed}></Foo>
		</>
	);
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const App2 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app2_component_3yvemqbq3fs.js"), "App2_component_3yveMqbQ3Fs"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,qBAAO,6GAgBjB\"}")
============================= app2_component_3yvemqbq3fs.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@builder.io/qwik/jsx-runtime";
import { _jsxSorted } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
export const App2_component_3yveMqbQ3Fs = ()=>{
    const signal = useSignal();
    const computed = signal.value + 'foo';
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("div", null, {
            className: "hola"
        }, null, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, {
            className: _wrapProp(signal)
        }, null, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, {
            className: signal
        }, null, 3, null),
        /*#__PURE__*/ _jsxSorted("div", {
            className: computed
        }, null, null, 3, null),
        /*#__PURE__*/ _jsxSorted(Foo, null, {
            className: "hola"
        }, null, 3, "u6_0"),
        /*#__PURE__*/ _jsxSorted(Foo, null, {
            className: _wrapProp(signal)
        }, null, 3, "u6_1"),
        /*#__PURE__*/ _jsxSorted(Foo, null, {
            className: signal
        }, null, 3, "u6_2"),
        /*#__PURE__*/ _jsxSorted(Foo, {
            className: computed
        }, null, null, 3, "u6_3")
    ], 1, "u6_4");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;0CAG+B;IAC9B,MAAM,SAAS;IACf,MAAM,WAAW,OAAO,KAAK,GAAG;IAChC,qBACC;sBACC,WAAC;YAAI,WAAU;;sBACf,WAAC;YAAI,SAAS,YAAE;;sBAChB,WAAC;YAAI,WAAW;;sBAChB,WAAC;YAAI,WAAW;;sBAEhB,WAAC;YAAI,WAAU;;sBACf,WAAC;YAAI,SAAS,YAAE;;sBAChB,WAAC;YAAI,WAAW;;sBAChB,WAAC;YAAI,WAAW;;;AAGnB\"}")
/*
{
  "origin": "test.tsx",
  "name": "App2_component_3yveMqbQ3Fs",
  "entry": null,
  "displayName": "App2_component",
  "hash": "3yveMqbQ3Fs",
  "canonicalFilename": "app2_component_3yvemqbq3fs",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    81,
    469
  ]
}
*/
== DIAGNOSTICS ==

[]
