packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_dead_code.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 449
expression: output
---
==INPUT==


import { component$ } from '@builder.io/qwik';
import { deps } from 'deps';

export const Foo = component$(({foo}) => {
	useMount$(() => {
		if (false) {
			deps();
		}
	});
	return (
		<div />
	);
})

============================= foo_component_htdrsvublie.tsx (ENTRY POINT)==

export const Foo_component_HTDRsvUbLiE = (props)=>{
    useMount$(()=>{});
    return <div/>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"yCAI8B;IAC7B,UAAU,KAIV;IACA,QACE;AAEH\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "foo_component_htdrsvublie",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    109,
    201
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./foo_component_htdrsvublie"), "Foo_component_HTDRsvUbLiE"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAIA,OAAO,MAAM,oBAAM,wGASjB\"}")
== DIAGNOSTICS ==

[]
