packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_default_export_index.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 1573
expression: output
---
==INPUT==


import { component$ } from '@builder.io/qwik';

export default component$(() => {
	return (
		<div onClick$={() => console.log(mongodb)}>
		</div>
	);
});


============================= src/components/mongo/index.tsx ==

import { componentQrl } from "@builder.io/qwik";
import { inlinedQrl } from "@builder.io/qwik";
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
    return <div onClick$={/*#__PURE__*/ inlinedQrl(()=>console.log(mongodb), "mongo_component_div_onClick_2EK0wZbP8qw")}>
		</div>;
}, "mongo_component_ouWLj4jA2oI"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/components/mongo/index.tsx\"],\"names\":[],\"mappings\":\";;AAGA,6BAAe,sCAAW;IACzB,QACE,IAAI,mCAAU,IAAM,QAAQ,GAAG,CAAC,sDAAU;EAC3C,EAAE;AAEJ,mCAAG\"}")
== DIAGNOSTICS ==

[]
