packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_derived_signals_children.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 2862
expression: output
---
==INPUT==


import { component$, useStore, mutable } from '@builder.io/qwik';

import {dep} from './file';

export const TextContent = component$((props) => {
	return (
		<>
			<div>data-nu: {props['data-nu']}</div>
			<div>class: {props.class}</div>
		</>
	);
});

export const App = component$(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return (
		<>
			<div>text</div>
			<div>{`text`}</div>
			<div>{1}</div>
			<div>{true}</div>
			<div>{`text${12}`}</div>
			<div>{typeof `text${12}` === 'string' ? 12 : 43}</div>
			<div>{signal}</div>
			<div>{signal.value}</div>
			<div>{12 + signal.value}</div>
			<div>{store.address.city.name}</div>
			<div>{store.address.city.name ? 'true' : 'false'}</div>
			<div>{dep}</div>
			<div>{dep.thing}</div>
			<div>{dep.thing + 'stuff'}</div>
			<div>{globalThing}</div>
			<div>{globalThing.thing}</div>
			<div>{globalThing.thing + 'stuff'}</div>
			<div>{signal.value()}</div>
			<div>{signal.value + unknown()}</div>
			<div>{mutable(signal)}</div>
			<div>{signal.value + dep}</div>
		</>
	);
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
import { _jsxSorted } from "@builder.io/qwik";
import { inlinedQrl } from "@builder.io/qwik";
import { _fnSignal } from "@builder.io/qwik";
import { Fragment as _Fragment } from "@builder.io/qwik/jsx-runtime";
import { useStore, mutable } from '@builder.io/qwik';
import { dep } from './file';
const TextContent_component_puSwpKXO7Kg = (props)=>{
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "data-nu: ",
            _wrapProp(props, "data-nu")
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "class: ",
            _wrapProp(props, "class")
        ], 3, null)
    ], 3, "u6_0");
};
export const TextContent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(TextContent_component_puSwpKXO7Kg, "TextContent_component_puSwpKXO7Kg"));
const App_component_ckEPmXZlub0 = ()=>{
    const signal = useSignal(0);
    const store = useStore({});
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("div", null, null, "text", 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, `text`, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, 1, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, true, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, `text${12}`, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, typeof `text${12}` === 'string' ? 12 : 43, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, signal, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, _wrapProp(signal), 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, _fnSignal((p0)=>12 + p0.value, [
            signal
        ], "12+p0.value"), 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, _fnSignal((p0)=>p0.address.city.name, [
            store
        ], "p0.address.city.name"), 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, _fnSignal((p0)=>p0.address.city.name ? 'true' : 'false', [
            store
        ], 'p0.address.city.name?"true":"false"'), 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, dep, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, dep.thing, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, dep.thing + 'stuff', 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, globalThing, 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, globalThing.thing, 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, globalThing.thing + 'stuff', 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, signal.value(), 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, signal.value + unknown(), 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, mutable(signal), 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, signal.value + dep, 1, null)
    ], 1, "u6_1");
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;AACA,SAAqB,QAAQ,EAAE,OAAO,QAAQ,mBAAmB;AAEjE,SAAQ,GAAG,QAAO,SAAS;0CAEW,CAAC;IACtC,qBACC;sBACC,WAAC;YAAI;sBAAU;;sBACf,WAAC;YAAI;sBAAQ;;;AAGhB;AAPA,OAAO,MAAM,4BAAc,+GAOxB;kCAE2B;IAC7B,MAAM,SAAS,UAAU;IACzB,MAAM,QAAQ,SAAS,CAAC;IACxB,qBACC;sBACC,WAAC,mBAAI;sBACL,WAAC,mBAAK,CAAC,IAAI,CAAC;sBACZ,WAAC,mBAAK;sBACN,WAAC,mBAAK;sBACN,WAAC,mBAAK,CAAC,IAAI,EAAE,GAAG,CAAC;sBACjB,WAAC,mBAAK,OAAO,CAAC,IAAI,EAAE,GAAG,CAAC,KAAK,WAAW,KAAK;sBAC7C,WAAC,mBAAK;sBACN,WAAC,6BAAK;sBACN,WAAC,mCAAK,KAAK,GAAO,KAAK;;;sBACvB,WAAC,mCAAK,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI;;;sBAC7B,WAAC,mCAAK,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI,GAAG,SAAS;;;sBACzC,WAAC,mBAAK;sBACN,WAAC,mBAAK,IAAI,KAAK;sBACf,WAAC,mBAAK,IAAI,KAAK,GAAG;sBAClB,WAAC,mBAAK;sBACN,WAAC,mBAAK,YAAY,KAAK;sBACvB,WAAC,mBAAK,YAAY,KAAK,GAAG;sBAC1B,WAAC,mBAAK,OAAO,KAAK;sBAClB,WAAC,mBAAK,OAAO,KAAK,GAAG;sBACrB,WAAC,mBAAK,QAAQ;sBACd,WAAC,mBAAK,OAAO,KAAK,GAAG;;AAGxB;AA5BA,OAAO,MAAM,oBAAM,+FA4BhB\"}")
== DIAGNOSTICS ==

[]
